...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pItemNoTextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/item_no"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/itemNoEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/item_no"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAlignment="viewEnd" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/scanBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/scan"
                app:srcCompat="@drawable/baseline_scanner_black_24dp" />

            <ImageButton
                android:id="@+id/searchItemNoBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/search"
                app:srcCompat="@drawable/baseline_search_black_24dp" />
        </LinearLayout>
...
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/brandTextInputLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/brand"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/brandEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/brand"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:textAlignment="viewEnd" />
            </com.google.android.material.textfield.TextInputLayout>

            <ImageButton
                android:id="@+id/searchBrandBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:contentDescription="@string/search"
                app:srcCompat="@drawable/baseline_search_black_24dp" />

...
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="@string/roll_weight"
                android:importantForAutofill="no">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/rollWeightEditText"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:ems="10"
                    android:hint="@string/g_per_roll"
                    android:importantForAutofill="no"
...
                    android:importantForAutofill="no"
                    android:inputType="textMultiLine" />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:id="@+id/buttonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/calculateBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:background="#FFFFFF"
                android:contentDescription="@string/action_calculate"
                app:srcCompat="@drawable/calculator" />
...
