...
    <string name="about_included_jars3">
        * Graphview (Apache 2.0 licens)
    </string>
    <string name="about_included_jars4">
        https://github.com/jjoe64/GraphView
    </string>
    <string name="action_calculate">Beregn</string>
    <string name="action_save">Gem</string>
    <string name="action_pricerunner">Pricerunner</string>
    <string name="action_productdata">Produktliste</string>
    <string name="action_supplier_list">Butiksliste</string>
    <string name="action_about">Om</string>
    <string name="layers">Lag</string>
...
    <string name="gm2">g pr. m2</string>
    <string name="paper_weight">Papirvægt</string>
    <string name="kilo_price">Kilopris</string>
    <string name="comment">Kommentar</string>
    <string name="menu_about">Om</string>
    <string name="about_heading">\nInspiration, kilder og kodestumper er planket fra\n\n</string>
    <string name="scan">Scan</string>
    <string name="search">Søg</string>
    <string name="meter_price">Pris pr. meter</string>
    <string name="menu_products">Produkter</string>
    <string name="menu_suppliers">Butikker</string>
    <string name="scan_prompt">Scan en stregkode eller QR-kode.</string>
    <string name="supplier">Butik</string>
    <string name="roll_price" tools:ignore="Typos">Pris pr. rulle</string>
...
    <string name="label_price_development">Prisudvikling</string>
    <string name="price_development">Prisudvikling</string>
    <string name="package_price_kr">Pris i kr. pr. pakke</string>
    <string name="filter_itemno_or_brand">Filtrér varenumre eller varemærker</string>
    <string name="item_no">Varenummer</string>
    <string name="brand">Varemærke</string>
    <string name="select">Vælg</string>
    <string name="graph">Graf</string>
    <string name="about_help_text">
        Forklaring til programmet. Her findes også programmets version, hvis der skal
        rapporteres fejl eller ønsker til udvidelse.</string>
    <string name="products_help_text">
        Oversigt over kendte produkter.\n
        Kolonnerne viser varemærke og varenummer samt løbenummer,
...
