<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright (c) 2020. Michael Erichsen.
  ~
  ~ The program is distributed under the terms of the GNU Affero General Public License v3.0
  -->

<androidx.recyclerview.widget.RecyclerView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/brandList"
    android:name="net.myerichsen.toiletpaper.ui.home.BrandFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="16dp"
    android:layout_marginRight="16dp"
    app:layoutManager="LinearLayoutManager"
    tools:context=".ui.home.BrandListFragment"
    tools:listitem="@layout/fragment_brand" />
