<?xml version="1.0" encoding="utf-8"?>

<!--
  ~ Copyright (c) 2020. Michael Erichsen.
  ~
  ~ The program is distributed under the terms of the GNU Affero General Public License v3.0
  -->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/fragmentPriceConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.prices.PriceSelectFragment">

    <TextView
        android:id="@+id/priceSelectPrompt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter_itemno_or_brand"
        android:textAlignment="viewStart"
        android:textSize="24sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pItemNoTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/priceSelectPrompt">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pItemNoEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="15"
            android:hint="@string/item_no"
            android:importantForAutofill="no"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/pSearchItemNoBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/pItemNoTextInputLayout"
        app:layout_constraintTop_toBottomOf="@+id/priceSelectPrompt"
        app:srcCompat="@drawable/baseline_search_black_24dp" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/pBrandTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pItemNoTextInputLayout">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/pBrandEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:ems="15"
            android:hint="@string/brand"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <ImageButton
        android:id="@+id/pSearchBrandBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:contentDescription="@string/search"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/pBrandTextInputLayout"
        app:layout_constraintTop_toTopOf="@+id/pBrandTextInputLayout"
        app:srcCompat="@drawable/baseline_search_black_24dp" />

    <ImageButton
        android:id="@+id/priceSelectionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/select"
        app:srcCompat="@drawable/test_black_48dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/pBrandTextInputLayout" />

    <ImageButton
        android:id="@+id/graphSelectionBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/graph"
        app:srcCompat="@drawable/graph_48"
        app:layout_constraintStart_toEndOf="@+id/priceSelectionBtn"
        app:layout_constraintTop_toBottomOf="@+id/pBrandTextInputLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>